--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,61 @@
 <html lang="PT-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SEVN ESPORTES</title>
+    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/global.css" />
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>SEVN ESPORTES ⚽</li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <h1>Confira as rodadas do nosso campeonato fictício!</h1>
+
+        <section class="board">
+            <div class="headerBoard">
+                <div class="arrow arrowBack" id="arrowB">
+                    <img src="./images/arrow.png" alt="" />
+                </div>
+                <div class="headerBoardInfos">
+                    <h4>Rodadas de Jogos</h4>
+                    <b id="rodada">RODADA</b>
+                </div>
+                <div class="arrow arrowFront" id="arrowF">
+                    <img src="./images/arrow.png" alt="" />
+                </div>
+            </div>
+            <div class="boardContent">
+                <div class="bodyBoard">
+                    <div class="game">
+                        <div class="team homeTeam">
+                            <img src="" alt="" />
+                            <b></b>
+                        </div>
+                        <div class="score">
+                            <b class="homeTeamScore"></b>
+                            <img src="./images/x.png" alt="" />
+                            <b class="awayTeamScore"></b>
+                        </div>
+                        <div class="team awayTeam">
+                            <b></b>
+                            <img src="" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <script type="Javascript" src="./scripts/index.js"></script>
 </body>
 
 </html>
