correção no html

--- a/src/index.html
+++ b/src/index.html
@@ -38,17 +38,17 @@
                 <div class="bodyBoard">
                     <div class="game">
                         <div class="team homeTeam">
-                            <img src="" alt="" />
-                            <b></b>
+                            <img src="./images/time-a.png" alt="">
+                            <b>Time A</b>
                         </div>
                         <div class="score">
-                            <b class="homeTeamScore"></b>
-                            <img src="./images/x.png" alt="" />
-                            <b class="awayTeamScore"></b>
+                            <b class="homeTeamScore">1</b>
+                            <img src="./images/x.png" alt="">
+                            <b class="awayTeamScore">2</b>
                         </div>
                         <div class="team awayTeam">
-                            <b></b>
-                            <img src="" alt="" />
+                            <b>Time B</b>
+                            <img src="./images/time-b.png" alt="">
                         </div>
                     </div>
                 </div>
